--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shibu's App</title>
+    <title>Multi-Stop Trip Cost Calculator</title>
     <!-- Load Tailwind CSS for modern, responsive styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -48,6 +48,27 @@
 
         <!-- Input Section -->
         <div id="input-section" class="space-y-6">
+            
+            <!-- Fuel Inputs (MOVED TO TOP) -->
+            <div class="grid grid-cols-2 gap-4 pb-4 border-b border-gray-200">
+                <label class="block">
+                    <!-- UPDATED: Use smaller text size on mobile to prevent label wrapping -->
+                    <span class="text-xs sm:text-sm font-medium text-gray-700">Fuel Efficiency (km/L or mi/gal)</span>
+                    <input id="fuel-efficiency-input" type="number" min="1" placeholder="e.g., 10" value="10"
+                           class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:ring-blue-500 focus:border-blue-500"
+                           required>
+                </label>
+
+                <label class="block">
+                    <!-- UPDATED: Use smaller text size on mobile to prevent label wrapping -->
+                    <span class="text-xs sm:text-sm font-medium text-gray-700">Fuel Price (per L or gal)</span>
+                    <input id="fuel-price-input" type="number" min="0.01" step="0.01" placeholder="e.g., 1.50" value="1.50"
+                           class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:ring-blue-500 focus:border-blue-500"
+                           required>
+                </label>
+            </div>
+
+
             <!-- 1. Origin -->
             <div class="space-y-1">
                 <span class="text-sm font-medium text-gray-700">1. Start Location (Origin)</span>
@@ -96,25 +117,6 @@
                         <div class="block bg-gray-300 w-14 h-8 rounded-full transition duration-300"></div>
                         <div class="dot absolute left-1 top-1 bg-white w-6 h-6 rounded-full transition duration-300 shadow-md"></div>
                     </div>
-                </label>
-            </div>
-
-            <!-- Fuel Inputs -->
-            <div class="grid grid-cols-2 gap-4 mt-6 border-t pt-4 border-gray-200">
-                <label class="block">
-                    <!-- UPDATED: Use smaller text size on mobile to prevent label wrapping -->
-                    <span class="text-xs sm:text-sm font-medium text-gray-700">Fuel Efficiency (km/L or mi/gal)</span>
-                    <input id="fuel-efficiency-input" type="number" min="1" placeholder="e.g., 10" value="10"
-                           class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:ring-blue-500 focus:border-blue-500"
-                           required>
-                </label>
-
-                <label class="block">
-                    <!-- UPDATED: Use smaller text size on mobile to prevent label wrapping -->
-                    <span class="text-xs sm:text-sm font-medium text-gray-700">Fuel Price (per L or gal)</span>
-                    <input id="fuel-price-input" type="number" min="0.01" step="0.01" placeholder="e.g., 1.50" value="1.50"
-                           class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:ring-blue-500 focus:border-blue-500"
-                           required>
                 </label>
             </div>
 
@@ -675,7 +677,7 @@
         // Load Google Maps API script dynamically
         function loadMapsScript() {
             const script = document.createElement('script');
-            script.src = `https://maps.googleapis.com/maps/api/js?key=${'AIzaSyC4ZlZggqxf0zRZRrBD3A4h_GWidIuc8c8'}&libraries=places,geometry&callback=initAutocomplete`;
+            script.src = `https://maps.googleapis.com/maps/api/js?key=${API_KEY}&libraries=places,geometry&callback=initAutocomplete`;
             script.async = true;
             script.onerror = () => {
                 displayMessage("Error loading the Google Maps API script. Check your API key or network connection.", 'error');
@@ -689,3 +691,4 @@
     </script>
 </body>
 </html>
+
