updated API key and APP title

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="w-full max-w-lg bg-white p-6 md:p-8 rounded-xl shadow-2xl space-y-6 mb-8">
         <h1 class="text-3xl font-extrabold text-gray-800 text-center border-b pb-3 mb-4">
-            Itinerary and Trip Cost Planner
+            Shibu's App
         </h1>
 
         <!-- Input Section -->
@@ -157,7 +157,7 @@
     <!-- Google Maps API Script -->
     <script>
         // !! IMPORTANT: REPLACE WITH YOUR ACTUAL API KEY !!
-        const API_KEY = "YOUR_API_KEY_HERE";
+        const API_KEY = "AIzaSyCPrjf-DCTbFEQu2Sb38YAJgROy_YvQsoI";
 
         const calculateButton = document.getElementById('calculate-button');
         const addPickupButton = document.getElementById('add-pickup-button');
