--- a/index.html
+++ b/index.html
@@ -60,8 +60,12 @@
 <body class="bg-gray-100 min-h-screen p-4 flex items-start md:items-center justify-center font-sans">
 
     <div class="w-full max-w-lg bg-white p-6 md:p-8 rounded-xl shadow-2xl space-y-6 mb-8">
-        <h1 class="text-3xl font-extrabold text-gray-800 text-center border-b pb-3 mb-4">
+        <h1 class="text-3xl font-extrabold text-gray-800 text-center border-b pb-3 mb-4 flex justify-center items-center relative">
             Shibu's Trip Cost Calculator
+            <!-- Visit Counter Badge -->
+            <span id="visit-counter-badge" class="absolute right-0 top-1/2 -translate-y-1/2 px-2 py-1 text-xs font-semibold bg-indigo-100 text-indigo-700 rounded-full shadow-sm">
+                Visits: Loading...
+            </span>
         </h1>
         <p class="text-sm text-gray-500 text-center">Calculate distance, time, and fuel cost for multi-stop trips within Manitoba, Canada.</p>
 
@@ -183,10 +187,110 @@
     </div>
 
     <!-- 1. Load the external configuration file (config.js) first -->
-    <!-- The API_KEY variable will be defined here -->
     <script src="config.js"></script>
+    
+    <!-- 2. Firebase SDK Imports for Counter (Wrapped in DOMContentLoaded for reliability) -->
+    <script type="module">
+        document.addEventListener('DOMContentLoaded', async () => {
+            // Imports are placed inside the listener to ensure the module is fully contained
+            import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
+            import { getAuth, signInAnonymously, signInWithCustomToken } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+            import { getFirestore, doc, setDoc, increment, onSnapshot } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
-    <!-- 2. Main Application Script -->
+            // Global variables provided by the Canvas environment
+            const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
+            const firebaseConfig = JSON.parse(typeof __firebase_config !== 'undefined' ? __firebase_config : '{}');
+            const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
+            
+            const visitCounterBadge = document.getElementById('visit-counter-badge');
+
+            /**
+             * The document reference for the public visit counter.
+             * Path: /artifacts/{appId}/public/data/metrics/page_visits
+             */
+            function getCounterDocRef(db) {
+                return doc(db, 
+                    `artifacts/${appId}/public/data/metrics/`, 
+                    'page_visits'
+                );
+            }
+
+            /**
+             * Increments the visit counter in Firestore and sets up a listener 
+             * to display the real-time count.
+             */
+            async function incrementAndListen(db) {
+                const counterRef = getCounterDocRef(db);
+                const counterFieldName = 'count'; 
+
+                try {
+                    // 1. Increment the counter using setDoc with merge: true 
+                    // This handles initial creation (resolves "No document to update" error)
+                    await setDoc(counterRef, {
+                        [counterFieldName]: increment(1)
+                    }, { merge: true }); 
+
+                    // 2. Set up real-time listener (onSnapshot)
+                    onSnapshot(counterRef, (docSnap) => {
+                        if (docSnap.exists()) {
+                            const currentCount = docSnap.data()[counterFieldName] || 0;
+                            visitCounterBadge.textContent = `Visits: ${currentCount.toLocaleString()}`;
+                            visitCounterBadge.classList.remove('bg-indigo-100');
+                            visitCounterBadge.classList.add('bg-green-100');
+                        } else {
+                            visitCounterBadge.textContent = `Visits: 0`;
+                        }
+                    }, (error) => {
+                        console.error("Firestore Listener Error:", error);
+                        visitCounterBadge.textContent = `Visits: Fail (Listen)`;
+                        visitCounterBadge.classList.replace('bg-indigo-100', 'bg-red-100');
+                    });
+
+                } catch (e) {
+                    console.error("Firestore Increment Error:", e);
+                    visitCounterBadge.textContent = `Visits: Fail (Auth)`;
+                    visitCounterBadge.classList.replace('bg-indigo-100', 'bg-red-100');
+                }
+            }
+
+            /**
+             * Initializes Firebase, performs authentication, and starts the counter logic.
+             */
+            async function initializeAppAndCounter() {
+                try {
+                    if (!firebaseConfig.apiKey) {
+                        console.warn("Firebase configuration is missing. Visit counter will not function.");
+                        visitCounterBadge.textContent = `Visits: Config Missing`;
+                        visitCounterBadge.classList.replace('bg-indigo-100', 'bg-yellow-100');
+                        return;
+                    }
+
+                    const app = initializeApp(firebaseConfig);
+                    const db = getFirestore(app);
+                    const auth = getAuth(app);
+
+                    // Sign in
+                    if (initialAuthToken) {
+                        await signInWithCustomToken(auth, initialAuthToken);
+                    } else {
+                        await signInAnonymously(auth);
+                    }
+
+                    incrementAndListen(db);
+
+                } catch (error) {
+                    console.error("Firebase Initialization for Counter failed:", error);
+                    visitCounterBadge.textContent = `Visits: Init Failed`;
+                    visitCounterBadge.classList.replace('bg-indigo-100', 'bg-red-100');
+                }
+            }
+
+            initializeAppAndCounter();
+        });
+    </script>
+
+
+    <!-- 3. Main Application Script (Google Maps Logic) -->
     <script>
         // Check for required API_KEY constant from config.js
         if (typeof API_KEY === 'undefined') {
