--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <div class="w-full max-w-lg bg-white p-6 md:p-8 rounded-xl shadow-2xl space-y-6 mb-8">
         <h1 class="text-3xl font-extrabold text-gray-800 text-center border-b pb-3 mb-4 flex justify-center items-center relative">
-            Shibu's Trip Cost Calculator
+            Shibu's App
             <!-- Visit Counter Badge -->
             <span id="visit-counter-badge" class="absolute right-0 top-1/2 -translate-y-1/2 px-2 py-1 text-xs font-semibold bg-indigo-100 text-indigo-700 rounded-full shadow-sm">
                 Visits: Loading...
